Turns out it should be fixed, or it falls behind the posts.

--- a/less/_menu.less
+++ b/less/_menu.less
@@ -63,7 +63,7 @@
 
 	#site-navigation, 
 	#secondary {
-		position: absolute;
+		position: fixed;
 		display: block;
 		overflow: scroll;
 		float: none;
